Added search history db

--- a/chatbot/templates/chatbot/base.html
+++ b/chatbot/templates/chatbot/base.html
@@ -26,6 +26,7 @@
     <script src="{% static 'chatbot/js/bs-init.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="{% static 'chatbot/js/theme.js' %}"></script>
+    <script src="{% static 'js/chatbot.js' %}"></script>
     <!-- Extra Scripts -->
     {% block scriptblock %}{% endblock scriptblock %}
 </body>
