--- a/places/templates/places/city.html
+++ b/places/templates/places/city.html
@@ -133,6 +133,7 @@
     <script src="{% static 'places/js/bs-init.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="{% static 'places/js/theme.js' %}"></script>
+    <script src="{% static 'js/chatbot.js' %}"></script>
 </body>
 
 </html>
