--- a/TourismRecommendationSystem/templates/accounts/login.html
+++ b/TourismRecommendationSystem/templates/accounts/login.html
@@ -42,7 +42,7 @@
                                         <hr>
                                     </form>
                                     <div class="text-center"><a class="small" href="#">Forgot Password?</a></div>
-                                    <div class="text-center"><a class="small" href="#">Create an Account!</a></div>
+                                    <div class="text-center"><a class="small" href="{% url 'register' %}">Create an Account!</a></div>
                                 </div>
                             </div>
                         </div>
