--- a/places/templates/places/city.html
+++ b/places/templates/places/city.html
@@ -38,6 +38,7 @@
             </div>
     </div>
     </nav>
+    {% block content %}
     <!-- End: Header White -->
     <main class="page project-page">
         <section class="portfolio-block project">
@@ -116,7 +117,9 @@
             </div>
         </section>
     </main>
+    {% endblock content %}
     </div>
+    
     <!-- Start: Footer Gradient -->
     <footer class="page-footer gradient">
         <div class="container">
