--- a/TourismRecommendationSystem/templates/index.html
+++ b/TourismRecommendationSystem/templates/index.html
@@ -18,9 +18,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="#about">About us</a></li>
-                    <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="#download">recommend me!</a></li>
                     {% if user.is_authenticated %}
-                        <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Logout</a></li>
+                    <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="{% url 'places:history' %}">History</a></li>
+                    <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
                     <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="{% url 'login' %}">Login</a></li>
                     {% endif %}
