--- a/TourismRecommendationSystem/templates/index.html
+++ b/TourismRecommendationSystem/templates/index.html
@@ -45,9 +45,10 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2>About US</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione earum odio tenetur maiores nisi alias, accusantium ab. Ad obcaecati debitis veniam quod consequatur! Nostrum tenetur hic accusantium temporibus, ducimus ipsum?</p>
+                    <p>This project focuses on building a personalized recommender system in the tourism field. The application interacts with the user in the beginning through a chatbot which is a web-based tool to simulate text-based interactions between
+                        user and the computers.</p>
                     <p></p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut nulla rerum molestiae libero aliquid debitis voluptatem repellat corrupti voluptatum itaque ipsam totam delectus aspernatur eius, expedita fugiat consequatur magnam repellendus.</p>
+                    <p>This Project is made by combined efforts of : <br> Rishi Mule <br>Shubham Mulik <br> Shrutika Kadam</p>
                 </div>
             </div>
         </div>
