--- a/chatbot/templates/chatbot/result.html
+++ b/chatbot/templates/chatbot/result.html
@@ -35,7 +35,7 @@
                     <div class="container">
                         <!-- Start: portfolio heading -->
                         <div class="heading">
-                            <h2>Your&nbsp; Recommendations!</h2>
+                            <h2>Personalized Recommendations <br> based on <br> your preferences!</h2>
                         </div>
                         <!-- End: portfolio heading -->
                         <div class="row justify-content-evenly">
